
  [ Lisandro Damián Nicanor Pérez Meyer ]
  * Revert the switch of arm64 to OpenGL ES as a result of
    <https://lists.debian.org/debian-devel/2018/11/msg00457.html>
  * New upstream release.
    - Bump Qt build dependencies.
    - Bump qtbase-abi to 5-11-3.
  * Fix typo in previous changelog entry.
  * Delete dont_get_screen_rotation.diff, already applied upstream.

 -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Tue, 04 Dec 2018 13:21:13 -0300

qtbase-opensource-src (5.11.2+dfsg-8) experimental; urgency=medium

  * Switch arm64 to use OpenGL ES instead of desktop OpenGL (Closes: #881333).
    - Rename libqt5gui5 to libqt5gui5a.
      - Add Breaks+Replaces against libqt5gui5 << 5.11.2+dfsg-8~. This
        avoids co-installation of the library.
      - Change all related dependencies to new binary name.
      - Add a lintian override for package name does not match soname warning.
    - Adjust arch qualifications for required packages.
    - debian/rules: add arm64 to gles2_architectures.
    - Rename debian/libqt5gui5 files to their libqt5gui5a counterparts,
      modifying them when necessary.
    - Update symbols files arch qualifications accordingly.
  * Update symbols files with buildds' logs.

 -- Lisandro Damián Nicanor Pérez Meyer <lisandro@debian.org>  Tue, 20 Nov 2018 20:24:04 -0300

qtbase-opensource-src (5.11.2+dfsg-7) unstable; urgency=medium

  * Change the fix for #913499 to not break FindQHelpGenerator.cmake
    that is shipped by extra-cmake-modules (closes: #914045).

 -- Dmitry Shachnev <mitya57@debian.org>  Mon, 19 Nov 2018 00:36:29 +0300

qtbase-opensource-src (5.11.2+dfsg-6) unstable; urgency=medium

  [ Dmitry Shachnev ]
  * Stop patching mkspecs/qmodule.pri in override_dh_auto_configure.
    The condition has changed to !host_build|!cross_compile in Qt 5.9,
    which is always true for us.
  * Strip -fdebug-prefix-map=${BUILDDIR} flag from generated qmodule.pri.