@@ -4,6 +4,11 @@ Author: Pino Toscano <pino@debian.org>
 Forwarded: no
 Last-Update: 2018-02-22
 
+---
+ qmake/library/ioutils.cpp                 |    2 +-
+ src/corelib/io/qfilesystemengine_unix.cpp |    2 +-
+ 2 files changed, 2 insertions(+), 2 deletions(-)
+
 --- a/qmake/library/ioutils.cpp
 +++ b/qmake/library/ioutils.cpp
 @@ -222,7 +222,7 @@ bool IoUtils::touchFile(const QString &t
@@ -17,7 +22,7 @@ Last-Update: 2018-02-22
  #    else
 --- a/src/corelib/io/qfilesystemengine_unix.cpp
 +++ b/src/corelib/io/qfilesystemengine_unix.cpp
-@@ -1439,7 +1439,7 @@ bool QFileSystemEngine::setFileTime(int
+@@ -1407,7 +1407,7 @@ bool QFileSystemEngine::setFileTime(int
          return false;
      }
  
